<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="app.melum.ui.artist.ArtistDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivArtist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/artist_image_height"
            android:background="#555"
            android:scaleType="centerCrop"
            app:imageUrl="@{viewModel.image}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholder="@{@drawable/broken_guitar}"
            tools:srcCompat="@tools:sample/backgrounds/scenic[5]" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_medium"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="back"
            android:padding="@dimen/size_medium"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/onBackground"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_medium"
            android:text="@string/artist_details_title"
            android:textSize="@dimen/font_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvArtistName"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_medium"
            android:text="@{viewModel.artist.name}"
            android:textAlignment="textStart"
            android:textSize="@dimen/font_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivArtist"
            tools:text="Jimmy Eat World" />

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/size_medium"
            android:src="@drawable/ic_share"
            android:tint="@color/onBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvArtistName" />

        <TextView
            android:id="@+id/tvArtistDescription"
            style="@style/Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_medium"
            android:text="@string/artist_details_top_albums"
            android:textAlignment="textStart"
            android:textSize="@dimen/font_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvArtistName" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAlbums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="@dimen/size_medium"
            app:layout_constraintBottom_toTopOf="@id/btnPlay"
            app:layout_constraintTop_toBottomOf="@id/tvArtistDescription"
            tools:layout_height="150dp"
            tools:listitem="@layout/item_album" />


        <ProgressBar
            android:id="@+id/progressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnPlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvArtistDescription"
            tools:visibility="visible">

        </ProgressBar>

        <Button
            android:id="@+id/btnPlay"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_medium"
            android:text="@string/artist_details_details_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>