...
                android:singleLine="true"
                android:text="@={viewModel.query}" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSearch"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/font_medium"
            android:layout_marginEnd="@dimen/size_medium"
            android:minWidth="0dp"
...
            app:layout_constraintBottom_toBottomOf="@id/tilSearch"
            app:layout_constraintEnd_toEndOf="@id/tilSearch"
            app:layout_constraintTop_toTopOf="@id/tilSearch"
            app:showIf="@{viewModel.query != ``}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvArtists"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilSearch"
            tools:listitem="@layout/item_artist_result" />
...
