...
                    app:expandedTitleMarginStart="24dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                    app:title="@{viewModel.album.title}"
                    tools:title="@string/album_details_title">

                    <ImageView
                        android:id="@+id/ivAlbumCover"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foreground="@color/overlay"
                        android:transitionName="@{`cover`+viewModel.album.id}"
                        app:crop="@{true}"
                        app:imageUrl="@{viewModel.album.cover}"
...
            app:constraint_referenced_ids="tvEmptyState,ivEmptyState"
            app:showIf="@{viewModel.isEmptyState &amp;&amp; !viewModel.loading}"
            tools:visibility="gone" />


        <Button
            android:id="@+id/btnSave"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/font_medium"
            android:text="@string/album_details_save_btn"
            app:layout_constraintBottom_toBottomOf="parent"
...
