<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="app.melum.entities.Album" />

        <import type="app.melum.common.Strings" />
    </data>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_medium">

        <ImageView
            android:id="@+id/ivAlbumCover"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:transitionName="@{`cover`+item.id}"
            android:contentDescription="album"
            app:placeholder="@{@drawable/ic_launcher_foreground}"
            app:corners="@{@dimen/size_medium}"
            app:imageUrl="@{item.cover}"
            app:crop="@{true}"
            tools:srcCompat="@tools:sample/backgrounds/scenic[11]" />

        <TextView
            android:id="@+id/tvAlbumTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/size_small"
            android:background="@drawable/dark_rounded"
            android:padding="@dimen/size_small"
            android:paddingStart="@dimen/size_small"
            android:paddingEnd="@dimen/size_small"
            android:text="@{Strings.cutLongText(item.title, 24)}"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            tools:text="Album title here" />

    </FrameLayout>

</layout>